메서드 분리,Exception 관리 수정